<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tury.socialloc.Registrar"

    android:background="@color/colorAccent">


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/etRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" />

        <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etRegContra"
        android:hint="@string/contraseña"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etRegEmail"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:padding="20dp" />

        <EditText
            android:id="@+id/etRegContra2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegEmail"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/contraseña2"
            android:inputType="textPassword"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp" />

    </LinearLayout>

    <Button
        android:text="@string/registrar"
        android:id="@+id/registrar"
        style="@style/myButton"
        android:elevation="10dp"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="0dp"

        android:layout_marginRight="0dp"
        android:onClick="registrarReg"
        android:background="@drawable/green_button" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:focusableInTouchMode="false"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="60sp" />

</RelativeLayout>
